# jira-report-generator

./: .gitignore  README.md  generate.py  main.py  pyproject.toml
src/utils/: __init__.py
src/utils/get/issue/: __init__.py  fields.py
src/utils/process/: __init__.py  columns.py
src/utils/save/: __init__.py
src/utils/save/response/: tocsv.py
src/utils/threadrunner/: ThreadRunner.py  __init__.py
